[gd_scene load_steps=8 format=3 uid="uid://bus6e712ij5qc"]

[ext_resource type="Script" path="res://home/world_selection.gd" id="1_cep2k"]
[ext_resource type="Theme" uid="uid://b0by7hlhq1qlj" path="res://main/pixel_theme.tres" id="1_m1hu2"]
[ext_resource type="Script" path="res://world/World.gd" id="2_ab0ro"]
[ext_resource type="PackedScene" uid="uid://l0amv7p2h58v" path="res://world/World.tscn" id="3_wkh5f"]
[ext_resource type="PackedScene" uid="uid://bqtr7tqdd75x5" path="res://home/title_screen.tscn" id="4_n54hh"]
[ext_resource type="PackedScene" uid="uid://c4by3skeseg0c" path="res://home/world_edit.tscn" id="5_c7qw7"]
[ext_resource type="PackedScene" uid="uid://b75h5pk7slpam" path="res://home/world_display.tscn" id="6_otdfd"]

[node name="World Selection" type="CanvasLayer" node_paths=PackedStringArray("world_display_vbox")]
script = ExtResource("1_cep2k")
world_script = ExtResource("2_ab0ro")
world_scene = ExtResource("3_wkh5f")
title_screen_scene = ExtResource("4_n54hh")
world_edit_scene = ExtResource("5_c7qw7")
world_display_scene = ExtResource("6_otdfd")
world_display_vbox = NodePath("ScrollContainer/VBoxContainer")

[node name="Title" type="RichTextLabel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 52.0
grow_horizontal = 2
theme = ExtResource("1_m1hu2")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Worlds"
fit_content = true

[node name="New World" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -99.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_m1hu2")
text = "New World"

[node name="Back" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -99.0
offset_right = 192.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_m1hu2")
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -315.0
offset_top = 68.0
offset_right = 315.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="Join World" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_top = 68.0
offset_right = 531.0
offset_bottom = 118.0
grow_horizontal = 2
theme = ExtResource("1_m1hu2")
disabled = true
text = "Join World
"

[node name="Edit World" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_top = 127.0
offset_right = 531.0
offset_bottom = 177.0
grow_horizontal = 2
theme = ExtResource("1_m1hu2")
disabled = true
text = "Edit World"

[connection signal="pressed" from="New World" to="." method="_on_new_world_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Join World" to="." method="_on_join_world_pressed"]
[connection signal="pressed" from="Edit World" to="." method="_on_edit_world_pressed"]
